--- a/market/core/templates/core/index.html
+++ b/market/core/templates/core/index.html
@@ -9,14 +9,15 @@
     <div class="grid-col-3 gap-3">
         {% for item in items %}
     </div>
+
     <a href="#">
      <div>
-        <img src="{{ items.image.urls}}"class alt="rounded-xl">
+        <img src="{{ items.image.url }}" class="rounded-xl">
      </div>
-     <div class="p-6 bg-white round-b rounded-xl">
-
-        <h2 class="text -2xl">{{item.name}}</h2>
-        <p class="text-gray-500">Price {{item.Price}}</p  >
+ 
+     <div class="p-6 bg-white rounded-b-xl">
+        <h2 class="text-2xl">{{ item.name }}</h2>
+        <p class="text-gray-500">Price: {{ item.price }}</p>
      </div>
     </a>  
  </div>
