--- a/market/core/templates/core/index.html
+++ b/market/core/templates/core/index.html
@@ -1,19 +1,18 @@
 {% extends 'core\base.html' %}
 {% block title %} welcome {% endblock %}
-
+cdcd
 {% block content %}
 
 <div class="mt px-6 py-12 bg-gray-100 rounded-xl">
     <h2 class="mb-12 text =2xl text-center">Newest items</h2>
 
-    <div class="grid-col-3 gap-3">
+    <div class="grid grid-col-3 gap-3">
         {% for item in items %}
-    </div>
-
-    <a href="#">
+      <div>
+        <a href="#">
      <div>
-        <img src="{{ items.image.url }}" class="rounded-xl">
-     </div>
+            <img src="{{ item.image.url }}" class="rounded-xl">
+      </div>
  
      <div class="p-6 bg-white rounded-b-xl">
         <h2 class="text-2xl">{{ item.name }}</h2>
@@ -24,4 +23,21 @@
      {% endfor %}
    </div>
   </div>
+  <div class="mt px-6 py-12 bg-gray-100 rounded-xl">
+    <h2 class="mb-12 text =2xl text-center">Categories</h2>
+
+    <div class="grid grid-col-3 gap-3">
+      {% for category in categories %}
+    <div>
+
+      <a href="#">  
+        <div class="p-6 bg-white rounded-b-xl">
+           <h2 class="text-2xl">{{ category.name }}</h2>
+           <p class="text-gray-500">{{ category.item.count }} items</p>
+        </div>
+          </a>  
+        </div>
+      {% endfor %}
+      </div> 
+    </div>
 {% endblock %}
