--- a/market/core/templates/core/index.html
+++ b/market/core/templates/core/index.html
@@ -9,7 +9,7 @@ cdcd
     <div class="grid grid-col-3 gap-3">
         {% for item in items %}
       <div>
-        <a href="#">
+        <a href="{% url 'item:detail' item.id %}">
      <div>
             <img src="{{ item.image.url }}" class="rounded-xl">
       </div>
