--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -6,5 +6,28 @@
 <div class=" w-1/2 my-6 mx-auto px-6 bg-gray-100 rounded-xl" >
     <h1 class="mb-6 text-3xl">Sign Up</h1>
 </div> 
+<form method="post" action=".">
+    {% csrf_token %}
+
+    {{ form.non_field_errors }}
+    <div class="mb-3">
+        <label class="inline_block mb-2">Username</label><br>
+        {{ form.username }}
+    </div>
+    <div class="mb-3">
+        <label class="inline_block mb-2">Email</label><br>
+        {{ form.email }}
+    </div>
+    <div class="mb-3">
+        <label class="inline_block mb-2">Password</label><br>
+        {{ form.password1 }}
+    </div>
+    <div class="mb-3">
+        <label class="inline_block mb-2">Password2</label><br>
+        {{ form.password2 }}
+    </div>
+
+    <button class="py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Submit</button>
+</form>
 
 {% endblock %}
