--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -23,9 +23,17 @@
         {{ form.password1 }}
     </div>
     <div class="mb-3">
-        <label class="inline_block mb-2">Password2</label><br>
+        <label class="inline_block mb-2">Repeat password</label><br>
         {{ form.password2 }}
     </div>
+    {% if form.errors or form.non_field_errors %}
+    <div clasfors="mb-3 px-6 bg-red-100 rounded-xl">
+        {% for field in form %}
+        {{ field.errors }}
+        {% endfor  %}
+    {{ form.non_field_errors }}
+    </div>
+    {% endif %}
 
     <button class="py-4 px-8 text-lg bg-teal-500 hover:bg-teal-700 rounded-xl text-white">Submit</button>
 </form>
