--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,7 +12,7 @@
         <a href="/" class="text-xl font-semibold"> Market place</a>
 
         <div class="space-x-6">
-            <a href="#" class="text-lg font-semibold hover:text-gray-500">New Item</a> 
+            <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a> 
             <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a> 
 
           {% if request.user.is_authenticated %}
