--- a/item/templates/item/items.html
+++ b/item/templates/item/items.html
@@ -10,6 +10,20 @@
         
           <button class="mt-2  py-4 px-8 text-lg bg-teal-500 text rounded-xl">Search</button>
       </form> 
+
+      <hr class="my-6">
+
+      <p class="font-semibold"> Categories</p>
+
+      <ul>
+        {% for category in categories %}
+        <li class="py-2 px-2 rounded-xl">
+          <a href="{% url 'item:items' %}?query={{ query }}&catgory={{ category.id }}"> {{ category.name }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+
+
     <div class="grid grid-cols-3 gap-3">
         {% for item in items %}
           <div>
