--- a/item/templates/item/items.html
+++ b/item/templates/item/items.html
@@ -22,6 +22,14 @@
                     </li>
                 {% endfor %}
        </ul>
+       <hr class="my-6"> 
+
+      <p class="font-semibold"> Clear filters</p>
+      <ul>
+        <li><a href="{% url 'item:items'%}" class="mt-2 py-4 px-8 inline-block bg-yellow-500 text-lg rounded-xl text-white"> Clear filters</a></li>
+      </ul>
+
+
 
 
     <div class="grid grid-cols-3 gap-3">
