--- a/item/templates/item/detail.html
+++ b/item/templates/item/detail.html
@@ -21,13 +21,12 @@
 {% if request.user == item.created_by %} 
  <div class="mt-6 p-6 bg-white rounded-xl">
         <p>This your Item!</p>                         <!-- this is when u created it     -->
-        <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px 6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Edith</a> 
-    </div>
-     <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px 6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Delete</a> 
+        <a href="{% url 'item:edit' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-green-500 text-white rounded-xl">Edith</a> 
+     <a href="{% url 'item:delete' item.id %}" class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-red-500 text-white rounded-xl">Delete</a> 
  </div>
 {% else %}
 <!--if u didnt create it takes u to contact seller-->
-       <a href="#"class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact Seller</a>
+       <a href= "{% url 'conversation:new' item.id %}"class="inline-block mt-6 px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Contact Seller</a>
    {% endif %}
     </div> 
 </div>
